--- a/backend/invoices/templates/invoice_pdf.html
+++ b/backend/invoices/templates/invoice_pdf.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -59,10 +60,16 @@
         }
 
         .logo-placeholder {
-            color: #666;
-            font-size: 14px;
+            width: 80px;
+            height: 80px;
             margin-right: 25px;
             float: left;
+        }
+
+        .logo-placeholder img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
         }
 
         .location-info {
@@ -244,7 +251,9 @@
     <div class="invoice-container">
         <!-- Header -->
         <div class="header">
-            <div class="logo-placeholder">Logo</div>
+            <div class="logo-placeholder">
+                <img src="{% static 'images/logo.png' %}" alt="Zahara Flowers Logo">
+            </div>
             <div class="company-info">
                 <h1>Zahara Flowers Ltd</h1>
                 <div class="company-details">
