--- a/backend/invoices/templates/invoice_pdf.html
+++ b/backend/invoices/templates/invoice_pdf.html
@@ -38,11 +38,21 @@
             border-bottom: 2px solid #9A1D56;
             padding: 40px 40px 20px 40px;
             overflow: hidden;
+            position: relative;
+        }
+
+        /* Clear the float */
+        .header::after {
+            content: "";
+            display: table;
+            clear: both;
+            width: 100%;
         }
 
         .company-info {
             float: left;
-            width: 65%;
+            width: 55%;
+            margin-left: 0;
         }
 
         .company-info h1 {
@@ -63,28 +73,27 @@
             height: 120px;
             margin-right: 25px;
             float: left;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
         .logo-placeholder img {
-            width: 100%;
-            height: 100%;
+            max-width: 100%;
+            max-height: 100%;
+            width: auto;
+            height: auto;
             object-fit: contain;
         }
 
         .location-info {
             float: right;
-            width: 30%;
+            width: 25%;
             text-align: right;
             color: #666;
             font-size: 14px;
             line-height: 1.6;
-        }
-
-        /* Clear the float */
-        .header::after {
-            content: "";
-            display: table;
-            clear: both;
+            margin-left: 0;
         }
 
         .invoice-details {
