--- a/backend/invoices/templates/invoice_pdf.html
+++ b/backend/invoices/templates/invoice_pdf.html
@@ -94,10 +94,10 @@
             font-size: 14px;
             line-height: 1.6;
             margin-left: 0;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            height: 120px;
+            position: relative;
+            top: 50%;
+            transform: translateY(-50%);
+            height: auto;
         }
 
         .invoice-details {
