--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -18,6 +18,7 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item"><a class="nav-link" href="/orders/">Orders</a></li>
             <li class="nav-item"><a class="nav-link" href="/payments/">Payments</a></li>
+            <li class="nav-item"><a class="nav-link" href="/customers/">Customers</a></li>
             <li class="nav-item"><a class="nav-link" href="/admin/">Admin</a></li>
           </ul>
         </div>
