--- a/backend/templates/home.html
+++ b/backend/templates/home.html
@@ -2,7 +2,7 @@
 {% block title %}Home | Zahara ERP{% endblock %}
 {% block content %}
 <div class="row g-4">
-  <div class="col-md-4">
+  <div class="col-md-3">
     <div class="card shadow-sm h-100">
       <div class="card-body">
         <h5 class="card-title">Orders</h5>
@@ -11,7 +11,7 @@
       </div>
     </div>
   </div>
-  <div class="col-md-4">
+  <div class="col-md-3">
     <div class="card shadow-sm h-100">
       <div class="card-body">
         <h5 class="card-title">Payments</h5>
@@ -20,7 +20,16 @@
       </div>
     </div>
   </div>
-  <div class="col-md-4">
+  <div class="col-md-3">
+    <div class="card shadow-sm h-100">
+      <div class="card-body">
+        <h5 class="card-title">Customers</h5>
+        <p class="card-text">Manage customer database, branches, and relationships.</p>
+        <a class="btn btn-primary" href="/customers/">Open Customers</a>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-3">
     <div class="card shadow-sm h-100">
       <div class="card-body">
         <h5 class="card-title">Admin</h5>
