--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -19,6 +19,7 @@
             <li class="nav-item"><a class="nav-link" href="/orders/">Orders</a></li>
             <li class="nav-item"><a class="nav-link" href="/payments/">Payments</a></li>
             <li class="nav-item"><a class="nav-link" href="/customers/">Customers</a></li>
+            <li class="nav-item"><a class="nav-link" href="/products/">Products</a></li>
             <li class="nav-item"><a class="nav-link" href="/admin/">Admin</a></li>
           </ul>
         </div>
